--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      xmr-donates: A project to find where you can donate Monero and help out!
+
+      <strong>This project is coded in Vue, a Javascript framework. Please enable it to continue.</strong>
+
+      While not a solution, feel free to access the website through Tor for additional protection.
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
